--- a/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbarStyle="insideOverlay"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@drawable/rounded_border"
+        android:paddingBottom="10dp"
         >
 
         <!--ProgressWheel:pwText="Progress"-->
@@ -26,59 +23,59 @@
 
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="167dp">
+
             <ImageView
                 android:id="@+id/place_image"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter" />
+
             <TextView
                 android:id="@+id/place_name_overlay"
                 android:layout_width="match_parent"
-                android:text="TEST"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_height="match_parent"
-                android:textSize="20sp"
+                android:background="#aa333333"
+                android:padding="10dp"
+                android:text="TEST"
                 android:textColor="@android:color/white"
-                />
+                android:textSize="20sp" />
+
             <ImageView
                 android:id="@+id/heart_item_page"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/grey_heart"
-                android:visibility="gone"
-                android:layout_alignParentRight="true"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:onClick="onHeartClick"
-                />
+                android:src="@drawable/grey_heart"
+                android:visibility="gone" />
         </RelativeLayout>
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="@string/address_word"
-            />
 
         <TextView
             android:id="@+id/place_address"
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Address line"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="OnMoreDetailsClick"
             android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             >
             <TextView
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -88,43 +85,46 @@
 
             <ImageView
                 android:id="@+id/arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/blue_right_arrow" />
         </LinearLayout>
 
         <TextView
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:id="@+id/place_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
             android:visibility="gone"
             />
 
     </LinearLayout>
 
-    <LinearLayout
-
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:text="@string/events_word"
+        android:textSize="18sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="5dp"
+        />
 
-        <TextView
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:scrollbarStyle="insideOverlay"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10sp"
-            android:text="@string/events_word"
-            android:textSize="20sp"
-            />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/eventListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/eventListView"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="10sp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10sp" />
-    </LinearLayout>
 
-</LinearLayout>
 </ScrollView>
+</LinearLayout>
