--- a/android/TKMS/app/src/main/res/layout/map_selector_layout.xml
+++ b/android/TKMS/app/src/main/res/layout/map_selector_layout.xml
@@ -17,9 +17,11 @@
         android:textColor="@color/colorBG"
         android:layout_marginBottom="20dp"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+
+        >
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/map_list_view"
@@ -34,7 +36,7 @@
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_weight="0.5"></android.support.v7.widget.RecyclerView>-->
 
-    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
 
