--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -5,23 +5,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:weightSum="1"
+    android:orientation="vertical"
+    android:layout_margin="10dp"
     >
-    <!--<Button-->
-        <!--android:id="@+id/button"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Button"-->
-        <!--android:visibility="gone"-->
-        <!--android:onClick="onVideoClick"-->
-        <!--/>-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="167dp"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_border">
         <ImageView
             android:id="@+id/imageView"
             android:scaleType="fitCenter"
@@ -29,19 +22,20 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             />
+
         <TextView
-            android:layout_below="@id/imageView"
             android:id="@+id/title_text"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18dp"
+            android:layout_alignParentBottom="true"
+            android:background="#aa333333"
+            android:padding="10dp"
             android:text="TEST"
-            android:textStyle="bold"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            />
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </RelativeLayout>
         <TextView
             android:id="@+id/description_text"
