--- a/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
@@ -40,6 +40,7 @@
                 android:layout_alignParentBottom="true"
                 android:background="#aa333333"
                 android:padding="10dp"
+                android:textStyle="bold"
                 android:text="TEST"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
