--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="wrap_content"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:scrollbarStyle="insideOverlay"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -15,6 +16,7 @@
         android:layout_height="167dp"
         android:orientation="vertical"
         android:background="@drawable/rounded_border">
+
         <ImageView
             android:id="@+id/imageView"
             android:scaleType="fitCenter"
@@ -36,16 +38,31 @@
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold" />
+
     </RelativeLayout>
-        <TextView
-            android:id="@+id/description_text"
+    <TextView
+        android:id="@+id/description_text"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="7dp"
+        android:textSize="16dp"
+        android:layout_height="wrap_content"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_margin="10dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:textSize="16dp"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="67dp"
+            android:layout_alignParentRight="true"
+            app:srcCompat="@mipmap/share" />
+
+    </RelativeLayout>
 
 </LinearLayout>
 </ScrollView>
