--- a/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
@@ -1,34 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_width="match_parent" >
 <LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="30dp"
+    android:layout_margin="20dp"
     android:focusableInTouchMode="true"
     >
 
     <LinearLayout
 
-        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:background="@drawable/rounded_border"
         android:orientation="horizontal"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         >
         <TextView
             android:layout_width="wrap_content"
-            android:text="@string/place_name_text"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Place name"
+            android:textSize="15sp"
+            android:paddingRight="5dp" />
         <EditText
             android:id="@+id/place_name_edittext"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:inputType="text"
-            android:layout_height="wrap_content" />
+            android:focusableInTouchMode="true" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_border"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Place category"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="15sp"/>
+        <ImageView
+            android:id="@+id/add_map_image_button"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/mymap_icon01"
+            android:onClick="onImageViewClick"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_border"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Experiences Description"
+            android:layout_height="wrap_content"
+            android:textSize="15sp" />
+        <EditText
+            android:id="@+id/place_description_edittext"
+            android:layout_width="match_parent"
+            android:minLines="4"
+            android:maxLines="5"
+            android:inputType="textMultiLine"
+            android:scrollbars="vertical"
+            android:layout_height="wrap_content"  />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_border"
+        >
     <fragment
         android:text="Search for the place"
         android:id="@+id/place_autocomplete_fragment"
@@ -43,45 +117,13 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         />
-
-    <ImageView
-        android:id="@+id/add_map_image_button"
-        android:layout_marginTop="20dp"
-        android:layout_width="100dp"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/mymap_icon01"
-        android:onClick="onImageViewClick"
-        />
-
-    <LinearLayout
-
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:text="@string/place_description_title"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/place_description_edittext"
-            android:layout_width="match_parent"
-            android:minLines="4"
-            android:maxLines="5"
-            android:inputType="textMultiLine"
-            android:scrollbars="vertical"
-            android:gravity="start"
-            android:layout_height="wrap_content"
-            tools:ignore="LabelFor" />
     </LinearLayout>
 
     <RelativeLayout
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
         <TextView
             android:id="@+id/event_list_header"
             android:layout_centerVertical="true"
@@ -113,17 +155,24 @@
         android:id="@+id/eventListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         />
 
-    <ImageView
-        android:id="@+id/edit_place_submit_button"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/the_app_icon"
-        android:onClick="OnEditPlaceSubmitButtonClick"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="40dp">
+        <Button
+            android:id="@+id/submit_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Done !"
+            android:background="@color/colorPrimary"
+            android:onClick="onSubmitButtonClick"/>
+    </LinearLayout>
 
 </LinearLayout>
 </ScrollView>
