--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -42,6 +42,7 @@
             android:id="@+id/map_name_edittext"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:maxLength="100"
             android:inputType="text"/>
 
 
