--- a/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
+            android:maxLength="100"
             android:focusableInTouchMode="true" />
     </LinearLayout>
 
@@ -97,6 +98,7 @@
             android:layout_width="match_parent"
             android:minLines="4"
             android:maxLines="5"
+            android:maxLength="1000"
             android:inputType="textMultiLine"
             android:scrollbars="vertical"
             android:layout_height="wrap_content"  />
